------------------------------------------------------------------
JASSH - JANALYSE-SSH - SCALA SSH API
Crosson David - crosson.david@gmail.com
------------------------------------------------------------------

TODO : 
  => Add tests with a remote host, in addition to localhost
  => "ls --format=single-column" may to be replaced by "ls | cat"
  => Check if "date '+%Y-%m-%d %H:%M:%S %z'" is supported on all *nix
  => split SSHAPI source file into several files.

CAVEATS :
  => ssh persisted shell session operations must be executed within the same thread, 
     do not span a persisted shell session across several threads => it may generate exception 
     So be careful when using REPL, as each "evaluation" is done with a new thread !
  => SCP operations can't retrieve special file such as /proc/cpuinfo, because their size are not known !
     Workarounds : use SFTP  OR  use a command such as "cat /proc/cpuinfo". 
     (The last one is the "best workaround", will work in all cases)

------------------------------------------------------------------
0.9.2 INPG
 - TODO : minor problem with script when invoking jajmx.SSH... or fr.janalyse.sh.SSH... without imports...
   see helloworld script for example
 
------------------------------------------------------------------
0.9.1
 - SSH tunneling fix, cleanup, and scaladocumented
 - Intricated SSH tunneling test added (self intrication, to simplify test case)
 
------------------------------------------------------------------
0.9.0
 - now using sbt-assembly 0.8.1
 - now using scalatest 0.8
 - SSHCommand, SSHBatch methods ! renamed to §§
 - new helper methods :
   test, exists, isFile, isDirectory, isExecutable 
 - findAfterDate & date helper fix !!
   Shell.date -> remote system time zone is now taken into account
 - Test cases fixes :
   Forcing parallelism to 6 ! for test case "Simultaenous SSH operations"
 - Code factorization :
   => ShellOperations trait added. Inherited by SSH and SSHShell.