@@ -6,7 +6,7 @@ Crosson David - crosson.david@gmail.com
 TODO : 
   => Add tests with a remote host, in addition to localhost
   => "ls --format=single-column" may to be replaced by "ls | cat"
-  => Check if "date '+%Y-%m-%d %H:%M:%S %z'" is supported on all *nix
+  => Check if "date -u '+%Y-%m-%d %H:%M:%S %Z'" is supported on all *nix  (Checked OK for : AIX, Linux, SunOS)
   => split SSHAPI source file into several files.
 
 CAVEATS :
@@ -19,6 +19,10 @@ CAVEATS :
 
 ------------------------------------------------------------------
 0.9.2 INPG
+ - date '+%Y-%m-%d %H:%M:%S %z' %z and %Z gives the same result on AIX, this result corresponds to linux %Z
+   So modifying code to use %Z instead of %z.
+   Now using GMT, "date -u '+%Y-%m-%d %H:%M:%S %Z'" in order to everything work well in all cases.
+ - SSH.once(Option[SSHOptions]) fix linked to Option type result not at the right place
  - TODO : minor problem with script when invoking jajmx.SSH... or fr.janalyse.sh.SSH... without imports...
    see helloworld script for example
  
